// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedList > スライディングウィンドウページネーション > 11番目のフィードを選択した場合、11番目から10件が表示される > feedlist-sliding-window-11th-item 1`] = `
"
フィード一覧 (未読200件)


╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ★★★                                                                                        200件 │
│                                                                                                  │
│ > ● Feed 11 (10件)                                                                               │
│   ● Feed 12 (10件)                                                                               │
│   ● Feed 13 (10件)                                                                               │
│   ● Feed 14 (10件)                                                                               │
│   ● Feed 15 (10件)                                                                               │
│   ● Feed 16 (10件)                                                                               │
│   ● Feed 17 (10件)                                                                               │
│   ● Feed 18 (10件)                                                                               │
│   ● Feed 19 (10件)                                                                               │
│   ● Feed 20 (10件)                                                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`FeedList > スライディングウィンドウページネーション > 最後のフィードを選択した場合、最後の10件が表示される > feedlist-sliding-window-last-item 1`] = `
"
フィード一覧 (未読200件)


╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ★★★                                                                                        200件 │
│                                                                                                  │
│   ● Feed 11 (10件)                                                                               │
│   ● Feed 12 (10件)                                                                               │
│   ● Feed 13 (10件)                                                                               │
│   ● Feed 14 (10件)                                                                               │
│   ● Feed 15 (10件)                                                                               │
│   ● Feed 16 (10件)                                                                               │
│   ● Feed 17 (10件)                                                                               │
│   ● Feed 18 (10件)                                                                               │
│   ● Feed 19 (10件)                                                                               │
│ > ● Feed 20 (10件)                                                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
